--- a/css/page.workingfile.css
+++ b/css/page.workingfile.css
@@ -812,7 +812,8 @@ ul.quicktabs-tabs li {
   width: 100%;
   height: 100%;
 }
-#block-views-static-banner-block .block-inner {
+#block-views-static-banner-block .block-inner,
+/* added no margin for the unrendered video block */ {
   margin: 0;
 }
 #block-views-static-banner-block .field-type-image img {
@@ -2607,6 +2608,7 @@ input[type=submit] {
   .not-front #main-content {
     width: 75%;
   }
+  .not-front.one-sidebar.sidebar-second { width:90%}
   #columns .region-sidebar-second {
     width: 24%;
     margin-left: -25%;
@@ -2653,6 +2655,7 @@ input[type=submit] {
   .sidebar-first #main-content {
     float: left;
     margin-left: 2%;
+
   }
   .two-sidebars #main-content {
     margin: 20px 2% 0 2%;
